created environment variables and test setting
~ change ecma version in eslint setting
~ add code spellm words to setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,11 @@
     "activityBar.background": "#452614",
     "titleBar.activeBackground": "#60351C",
     "titleBar.activeForeground": "#FDFBF9"
-  }
+  },
+  "cSpell.words": [
+    "authapi",
+    "cleancode",
+    "fullname",
+    "supersecretpassword"
+  ]
 }
