install package, instances-container
~ vscode setting to add more codeSpell

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,9 +11,10 @@
     "titleBar.activeForeground": "#FDFBF9"
   },
   "cSpell.words": [
-    "authapi",
-    "cleancode",
-    "fullname",
-    "supersecretpassword"
-  ]
+		"authapi",
+		"cleancode",
+		"Dicoding",
+		"fullname",
+		"supersecretpassword"
+	]
 }
