--- a/.env.prod
+++ b/.env.prod
@@ -1,12 +1,16 @@
+# HTTP SERVER
+HOST=0.0.0.0
+PORT=5000
+
 # POSTGRES
-PGHOST=localhost
+PGHOST=0.0.0.0
 PGUSER=postgres
 PGDATABASE=authapi
 PGPASSWORD=
 PGPORT=5432
 
 # POSTGRES TEST
-PGHOST_TEST=localhost
+PGHOST_TEST=0.0.0.0
 PGUSER_TEST=postgres
 PGDATABASE_TEST=authapi_test
 PGPASSWORD_TEST=
