--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,10 +11,57 @@
     "titleBar.activeForeground": "#FDFBF9"
   },
   "cSpell.words": [
+		"adalah",
+		"Anda",
+		"autentikasi",
 		"authapi",
+		"baru",
+		"batas",
+		"berhasil",
+		"Bila",
+		"bukan",
 		"cleancode",
+		"dapat",
+		"dari",
+		"dengan",
+		"diberikan",
+		"dibutuhkan",
 		"Dicoding",
 		"fullname",
-		"supersecretpassword"
+		"Jika",
+		"karakter",
+		"karena",
+		"kebutuhan",
+		"kegagalan",
+		"konteks",
+		"lanjutkan",
+		"masukkan",
+		"melakukan",
+		"melebihi",
+		"membuat",
+		"memiliki",
+		"Mendapatkan",
+		"mengandung",
+		"nilai",
+		"pada",
+		"Penanganan",
+		"properti",
+		"salah",
+		"sebelumnya",
+		"secara",
+		"sesuai",
+		"supersecretpassword",
+		"tangani",
+		"tanpa",
+		"terdaftar",
+		"terintervensi",
+		"terjadi",
+		"terlarang",
+		"tersebut",
+		"tersedia",
+		"tidak",
+		"tipe",
+		"untuk",
+		"XVCJ"
 	]
 }
