--- a/.env.prod
+++ b/.env.prod
@@ -15,3 +15,7 @@ PGUSER_TEST=postgres
 PGDATABASE_TEST=authapi_test
 PGPASSWORD_TEST=
 PGPORT_TEST=5432
+
+# JWT Auth Token Manager
+ACCESS_TOKEN_KEY=
+REFRESH_TOKEN_KEY=
